# qr-code-gen

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs  mod.rs
src/lib/: hashtable.rs
src/qr_code/: generator.rs  mod.rs
src/qrcode/: extractors.rs  generator.rs  mod.rs
src/routes/: mod.rs  qr.rs  uri.rs
