[package]
name = "qrcode_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-rt = "2.8.0"
actix-cors = "0.7.0"
actix-files = "0.6.2"
tokio = "1.31.0"
chrono = "0.4.26"
gif = "0.13.0"
image = "0.25.1"
base64 = "0.22.1" 
mongodb = "2.6.0"
imageproc = "0.25"
qrcodegen = "1.8.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.104"
log = "^0.4"
derive_more = "^0.99"
url = "^2.4.0"
bincode = "1.3.3"
hex = "0.4.3"
dotenv = "0.15.0"
mime = "0.3.16"
rand = "0.8.4"
num_cpus = "1.12.0"
pinata-sdk = "1.1.0"
ethers = { version = "1.0.0", features = ["ws", "legacy"] }
ethers-core = "1.0.2"
ethers-signers = "1.0.2"
env_logger = "0.11.3"
strum_macros = "^0.26"
uuid = { version = "^1.8", features = ["v4"] }
strum = { version = "^0.26", features = ["derive"] }